Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjObjectField.quorum
class Main
    Number v = Test()
    action Main
    end

    action Test() returns Number
        Object var
        return var
    end
end